--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Looking for opportunities to grow, learn, and deliver high-quality front-end sol
             <a href="#contact" class="btn">Let's talk</a>
         </div>
         <div class="glow-img-wrap">
-            <img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
+            <img src="/assets/ 2026-01-24 at 8.03.04 PM.jpeg">
         </div>
     </section>
 
@@ -52,7 +52,9 @@ Looking for opportunities to grow, learn, and deliver high-quality front-end sol
             <img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
         </div>
         <p style="max-width: 700px; margin: 0 auto; color: var(--text-muted);">
-            Building robust applications and clean interfaces is what I do best. My focus is on creating seamless user experiences using modern web standards.
+            Hi, I’m Shreyas, a passionate Front-End Web Developer (Fresher) who enjoys building clean, responsive, and visually appealing websites.<br> I focus on turning ideas into smooth user experiences using HTML, CSS and JavaScript.<br>
+I believe in learning by building, so I work on real projects to improve my skills in layout, responsiveness, animations, and modern UI design.<br> I pay close attention to details and always aim to create interfaces that feel simple, fast, and professional.<br>
+My goal is to grow as a developer, work on meaningful projects, and build high-quality, professional-level clean websites that users love to interact with.
         </p>
     </section>
 
