--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Looking for opportunities to grow, learn, and deliver high-quality front-end sol
             <a href="#contact" class="btn">Let's talk</a>
         </div>
         <div class="glow-img-wrap">
-            <img src="/assets/ 2026-01-24 at 8.03.04 PM.jpeg">
+            <img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
         </div>
     </section>
 
