--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <title>Shreyas Waghmare | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <script>
+  if ('scrollRestoration' in history) {
+    history.scrollRestoration = 'manual';
+  }
+  window.scrollTo(0, 0);
+</script>
+
 </head>
 <body>
 
+    <!-- Loader -->
+<div id="loader">
+  <div class="loader-circle"></div>
+  <h3>Loading...</h3>
+</div>
+
+
     <nav>
-        <div class="logo"><img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg" alt="My photo">
+        <div class="logo"><img src="./assets/Image 2026-01-24 at 8.03.04 PM.jpeg" alt="My photo">
         <span><h3>Shreyas</h3></span>
       </div>
         <div class="menu-toggle" id="mobile-menu">
@@ -27,29 +42,24 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h4>HELLO!</h4>
-            <h1>I'm <span>Shreyas Waghmare</span></h1>
-            <h3>Front-end Web Developer</h3>
-            <p>I am a passionate Front-End Web Developer (Fresher) who loves turning ideas into clean, responsive, and user-friendly websites.<br> I focus on building modern UI designs with HTML, CSS, JavaScript, and React, following best practices for performance and accessibility.<br>
-Even as a fresher, I work with a project-based learning approach, which means I don’t just write code — I build real interfaces, solve layout problems, and improve user experience. I pay strong attention to design details, responsiveness, and smooth interactions.<br>
-My goal is to create clean, minimal, and professional websites that look great on all devices. I am constantly learning new tools, improving my skills, and excited to work on real-world projects with clients and teams.
-,<h4>Skills & Technologies:-</h4>
-HTML5, CSS3, JavaScript (ES6+)<br>
-Responsive Design (Mobile-First)<br>
-Basic Git & GitHub<br>
-Clean UI / UX focused layouts<br>
-Looking for opportunities to grow, learn, and deliver high-quality front-end solutions.</p>
-            <a href="#contact" class="btn">Let's talk</a>
+            <h4 class="fade-up">HELLO! I'm</h4>
+            <h1 class="fade-up delay-1" id="typing"><span></span></h1>
+            <h3 class="fade-up delay-2">Front-end Web Developer</h3>
+            <p class="fade-up delay-3">
+              I create modern web interfaces with smooth micro-interactions...
+            </p>
+            <a href="#contact" class="btn fade-up delay-4">Let's talk</a>
+
         </div>
         <div class="glow-img-wrap">
-            <img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
+            <img src="./assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
         </div>
     </section>
 
-    <section id="about" style="text-align: center;">
+    <section id="about" class="reveal" style="text-align: center;">
         <h2 class="section-title">About <span>Me</span></h2>
         <div class="glow-img-wrap" style="margin: 0 auto 40px; width: 220px; height: 220px;">
-            <img src="/assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
+            <img src="./assets/Image 2026-01-24 at 8.03.04 PM.jpeg">
         </div>
         <p style="max-width: 700px; margin: 0 auto; color: var(--text-muted);">
             Hi, I’m Shreyas, a passionate Front-End Web Developer (Fresher) who enjoys building clean, responsive, and visually appealing websites.<br> I focus on turning ideas into smooth user experiences using HTML, CSS and JavaScript.<br>
@@ -58,7 +68,7 @@ My goal is to grow as a developer, work on meaningful projects, and build high-q
         </p>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="reveal">
         <h2 class="section-title">My <span>Skills</span></h2>
         <div class="skills-container">
             <div class="skill-bar">
@@ -76,7 +86,7 @@ My goal is to grow as a developer, work on meaningful projects, and build high-q
         </div>
     </section>
 
-    <section id="services">
+    <section id="services" class="reveal">
         <h2 class="section-title">My <span>Services</span></h2>
         <div class="services-grid">
             <div class="service-card"><h3>Web Development</h3></div>
@@ -85,7 +95,7 @@ My goal is to grow as a developer, work on meaningful projects, and build high-q
         </div>
     </section>
 
-    <footer id="contact" style="text-align: center; padding: 80px 10%; border-top: 1px solid #222;">
+    <footer id="contact" tabindex="-1" style="text-align: center; padding: 80px 10%; border-top: 1px solid #222;">
         <h2 class="section-title">Contact <span>Me</span></h2>
         <p>Email: shreyaswaghmare0210@gmail.com</p>
         <p>WhatsApp: 9011950578</p>
