--- a/index.html
+++ b/index.html
@@ -72,28 +72,55 @@ My goal is to grow as a developer, work on meaningful projects, and build high-q
         <h2 class="section-title">My <span>Skills</span></h2>
         <div class="skills-container">
             <div class="skill-bar">
-                <div class="skill-info"><span>JAVA</span><span>85%</span></div>
-                <div class="bar-bg"><div class="bar-fill" style="width: 85%;"></div></div>
-            </div>
-            <div class="skill-bar">
-                <div class="skill-info"><span>HTML / CSS</span><span>95%</span></div>
-                <div class="bar-bg"><div class="bar-fill" style="width: 95%;"></div></div>
-            </div>
-            <div class="skill-bar">
-                <div class="skill-info"><span>JAVASCRIPT</span><span>75%</span></div>
-                <div class="bar-bg"><div class="bar-fill" style="width: 75%;"></div></div>
-            </div>
+  <div class="skill-info"><span>JAVA</span><span>85%</span></div>
+  <div class="bar-bg">
+    <div class="bar-fill" data-percent="85"></div>
+  </div>
+</div>
+
+<div class="skill-bar">
+  <div class="skill-info"><span>HTML / CSS</span><span>95%</span></div>
+  <div class="bar-bg">
+    <div class="bar-fill" data-percent="95"></div>
+  </div>
+</div>
+
+<div class="skill-bar">
+  <div class="skill-info"><span>JAVASCRIPT</span><span>75%</span></div>
+  <div class="bar-bg">
+    <div class="bar-fill" data-percent="75"></div>
+  </div>
+</div>
+
         </div>
     </section>
 
     <section id="services" class="reveal">
-        <h2 class="section-title">My <span>Services</span></h2>
-        <div class="services-grid">
-            <div class="service-card"><h3>Web Development</h3></div>
-            <div class="service-card"><h3>Java Programming</h3></div>
-            <div class="service-card"><h3>UI/UX Design</h3></div>
-        </div>
-    </section>
+  <h2 class="section-title">My <span>Services</span></h2>
+
+  <div class="services-grid">
+
+    <div class="service-card reveal">
+      <img src="./assets/webdev.jpg" alt="Web Development">
+      <h3>Web Development</h3>
+      <p>Modern, responsive and fast websites using clean HTML, CSS and JavaScript.</p>
+    </div>
+
+    <div class="service-card reveal">
+      <img src="./assets/java.jpg" alt="Java Programming">
+      <h3>Java Programming</h3>
+      <p>Core Java concepts, clean code and logic building for real-world applications.</p>
+    </div>
+
+    <div class="service-card reveal">
+      <img src="./assets/uiux.jpg" alt="UI/UX Design">
+      <h3>UI/UX Design</h3>
+      <p>Beautiful interfaces with focus on usability, spacing and smooth interactions.</p>
+    </div>
+
+  </div>
+</section>
+
 
     <footer id="contact" tabindex="-1" style="text-align: center; padding: 80px 10%; border-top: 1px solid #222;">
         <h2 class="section-title">Contact <span>Me</span></h2>
