--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h4 class="fade-up">HELLO! I'm</h4>
-            <h1 class="fade-up delay-1" id="typing"><span></span></h1>
+            <h1 class="fade-up delay-1" id="typing"></h1>
             <h3 class="fade-up delay-2">Front-end Web Developer</h3>
             <p class="fade-up delay-3">
               I create modern web interfaces with smooth micro-interactions...
@@ -91,6 +91,21 @@ My goal is to grow as a developer, work on meaningful projects, and build high-q
     <div class="bar-fill" data-percent="75"></div>
   </div>
 </div>
+
+<div class="skill-bar">
+  <div class="skill-info"><span>Git</span><span>80%</span></div>
+  <div class="bar-bg">
+    <div class="bar-fill" data-percent="80"></div>
+  </div>
+</div>
+
+<div class="skill-bar">
+  <div class="skill-info"><span>GitHub</span><span>75%</span></div>
+  <div class="bar-bg">
+    <div class="bar-fill" data-percent="75"></div>
+  </div>
+</div>
+
 
         </div>
     </section>
